# wa-voicenote-triage

./: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
docs/: PLAN.md
infra/: README.md  main.bicep  main.parameters.json
src/wa_voicenote/: aoai_client.py  blob_repo.py  config.py  diag.py  handlers.py  main.py  observability.py  state_repo.py  transcoder.py  twilio_client.py  twilio_signing.py
tests/: conftest.py  test_allowlist.py  test_aoai_client.py  test_aoai_live.py  test_blob_repo.py  test_config.py  test_diag.py  test_handlers.py  test_main.py  test_observability.py  test_smoke.py  test_state_repo.py  test_transcoder.py  test_twilio_client.py  test_twilio_live.py  test_twilio_signing.py
