[project]
name = "wa-voicenote-triage"
version = "0.1.0"
description = "Personal WhatsApp voice-note triage via Twilio Sandbox + Azure OpenAI gpt-audio-1.5."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Kevin Leon" }]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_voicenote"]

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "mypy>=1.20,<3",
    "pytest>=9.0,<10",
    "pytest-cov>=7.1,<8",
    "pytest-asyncio>=1.3,<2",
    "httpx>=0.28,<1",
]

# ----- Ruff ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PLR",  # pylint refactor (includes PLR2004 magic-value-comparison)
    "PLW",  # pylint warning
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "S",    # flake8-bandit
]
ignore = [
    # PLR0913 = too many arguments; FastAPI dependency-injection signatures often exceed default
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use `assert` (S101) and small numeric literals (PLR2004).
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

# ----- mypy ------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["wa_voicenote"]
exclude = [
    "build/",
    "dist/",
    "\\.venv/",
]

# ----- pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
pythonpath = ["src"]
asyncio_mode = "auto"

# ----- coverage --------------------------------------------------------------

[tool.coverage.run]
source = ["src/wa_voicenote"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
