[project]
name = "wa-voicenote-triage"
version = "0.1.0"
description = "Personal WhatsApp voice-note triage via Twilio Sandbox + Azure OpenAI gpt-audio-1.5."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Kevin Leon" }]
dependencies = [
    "aiohttp>=3.10,<4",
    "azure-data-tables>=12.5,<13",
    "azure-identity>=1.19,<2",
    "azure-monitor-opentelemetry>=1.7,<2",
    "azure-storage-blob>=12.24,<13",
    "fastapi>=0.118,<1",
    "httpx>=0.28,<1",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.20,<1",
    "structlog>=25.4,<26",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_voicenote"]

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
    "mypy>=1.20,<3",
    "pytest>=9.0,<10",
    "pytest-cov>=7.1,<8",
    "pytest-asyncio>=1.3,<2",
]

# ----- Ruff ------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PLR",  # pylint refactor (includes PLR2004 magic-value-comparison)
    "PLW",  # pylint warning
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "S",    # flake8-bandit
]
ignore = [
    # PLR0913 = too many arguments; FastAPI dependency-injection signatures often exceed default
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use `assert` (S101) and small numeric literals (PLR2004).
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

# ----- mypy ------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["wa_voicenote"]
exclude = [
    "build/",
    "dist/",
    "\\.venv/",
]

# ----- pytest ----------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
pythonpath = ["src"]
asyncio_mode = "auto"

# ----- coverage --------------------------------------------------------------

[tool.coverage.run]
source = ["src/wa_voicenote"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
